# RecWizard

./: .gitignore  CONTRIBUTING.md  README.md  changelog.md  noxfile.py  pyproject.toml  warnings.txt
dataset/: test.py  upload_to_hub.py  utils.py
dataset/inspired_unicrs/: collect_entity.py  inspired_unicrs.py
dataset/redial/: collect_vocab.py  extract_name2link.py  redial.py
dataset/redial_unicrs/: collect_entity.py  extract_Name2link.py  redial_unicrs.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/recwizard/: configuration_utils.html  model_utils.html  module_utils.html  tokenizer_utils.html
docs/_sources/development/: module.md.txt  overview.md.txt
docs/_sources/quick_start/: concept.rst.txt  example.rst.txt  installation.rst.txt
docs/_sources/reference/: index.rst.txt
docs/development/: data.html  model.html  module.html  others.html  overview.html
docs/quick_start/: concept.html  example.html  index.html  installation.html
docs/reference/: index.html
docs/reference/baseclass/: config.html  index.html  module.html  pipeline.html  tokenizer.html
docs/reference/modules/: index.html
docs/reference/pipelines/: chatgpt.html  expansion.html  fill_blank.html  index.html  switch_decode.html  trivial.html
docs/resource/: data_zoo.html  model_zoo.html  module_zoo.html  overview.html
docs/usage/: index.html
docs/usage/development/: generator.html  index.html  interface.html  pipeline.html  (+3 more)
docsrc/: deploy.sh
docsrc/docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docsrc/source/: conf.py  index.rst
examples/build_tokenizer/: common.py  kbrd.py  kgsf.py  redial.py  unicrs.py
examples/load_pipeline/: chatgpt_merge_pipe_unicrs_rec_kbrd_gen.py  expansion_pipe_kbrd_rec_gemma_gen.py  fill_blank_pipe_unicrs_rec_unicrs_gen.py  kgsf.py  redial_pipe_redial_rec_redial_gen.py  trivial_pipe_kbrd_rec_kbrd_gen.py  trivial_pipe_kgsf_rec_kgsf_gen.py
examples/response/: chatgpt_agent.py  chatgpt_gen_expansion.py  chatgpt_gen_fill_blank.py  chatgpt_manager.py  chatgpt_rec_fill_blank.py  llama_expansion.py  redial.py  unicrs+autorec.py  unicrs.py
examples/share_model/: kbrd.py
examples/tokenizers/: redial.py  redial_tokenizers.py  tokenizers.py
server/: api.py  demo.py  start.sh  utils.py
src/recwizard/: __init__.py  configuration_utils.py  model_utils.py  module_utils.py  monitor_utils.py  pipeline_utils.py  tokenizer_utils.py
test/: special_tokens_map.json  tokenizer_config.json
test/concept/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
test/context/: added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
test/dialogue/: tokenizer.json  tokenizer_config.json
test/nltk/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
test/prompt/: added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
test/raw_vocab/: entity2id.json
test/sen_encoding/: special_tokens_map.json  tokenizer.json
test/word/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
tests/: test_configuration_utils.py  test_model_utils.py  test_module_utils.py
tests/utility/: test_device_manager.py  test_entity_linking.py  test_singleton.py
(+377 files in other folders)
